--- a/Project/src/app/issues/issues.component.css
+++ b/Project/src/app/issues/issues.component.css
@@ -3,4 +3,30 @@
     padding: 20px 10px 0px 20px;
     margin-top:3rem;
     font-family:" Open Sans, sans-serif;"
-}
+
+  }
+  .drop1{
+    margin-left: 50px;
+  }
+  .drops{
+    width:100px;
+  }
+  .bu1{
+    margin-left: 350px;
+    color:black;
+
+  }
+  .box1 {
+    margin-top:30px;
+    width: 1250px;
+    height: 150px;
+    padding: 50px;
+    border: 1px solid black;
+  }
+  .box2{
+    margin-top:30px;
+    width: 1250px;
+    height: 500px;
+    padding: 50px;
+    border: 1px solid black;
+  }
