team issue dropbox

--- a/Project/src/app/teamissue/teamissue.component.css
+++ b/Project/src/app/teamissue/teamissue.component.css
@@ -4,3 +4,9 @@
     margin-top:3rem;
     font-family:" Open Sans, sans-serif;"
   }
+  .drop1{
+    margin-left: 50px;
+  }
+  .drops{
+    width:100px;
+  }
