--- a/Project/src/app/teamissue/teamissue.component.html
+++ b/Project/src/app/teamissue/teamissue.component.html
@@ -6,16 +6,17 @@
 
   <body class="main">
       <div class="row">
+        
           <h3>ISSUES</h3>
             
-              <h5 class=drop1>showing sprint</h5>
+              <h5 class=drop1>showing issues of</h5>
               <div class="drop1">
               <select class="col-sm-5 col-md-12" >
-                <option *ngFor="let emp of department">
-                {{emp}}
+                <option *ngFor="let iss of issue">
+                {{iss}}
                 </option>
               </select>
             </div >
-          
+          </div>
 </body>
 </html>
