--- a/Project/src/app/teamissue/teamissue.component.html
+++ b/Project/src/app/teamissue/teamissue.component.html
@@ -2,6 +2,11 @@
   <head>
     
     <title> </title>
+    <style>
+    h3{
+      margin-left:50px;
+    }
+    </style>
   </head>
 
   <body class="main">
